force-app/main/default/objects/Bank_Account_Details__c/Bank_Account_Details__c.object-meta.xml
<CustomObject>
    <label>Bank Account Detail</label>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>Bank Account Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Account Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>