force-app/main/default/objects/Bank_Account_Details__c/fields/BankAccountName__c.field-meta.xml
<CustomField>
    <fullName>BankAccountName__c</fullName>
    <formula>Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankAccountName</label>
    <type>Text</type>
</CustomField>