force-app/main/default/objects/Bank_Account_Details__c/fields/BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumber__c</fullName>
    <formula>BSB_Number__c &amp; Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankAccountNumber</label>
    <type>Text</type>
</CustomField>