force-app/main/default/objects/Bank_Account_Details__c/fields/BankAccountParticulars__c.field-meta.xml
<CustomField>
    <fullName>BankAccountParticulars__c</fullName>
    <formula>&quot;TripADeal Pty Ltd&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankAccountParticulars</label>
    <type>Text</type>
</CustomField>