force-app/main/default/objects/Bank_Account_Details__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <formula>Order__r.Name &amp;&quot;-&quot;&amp;  Order__r.Purchaser_Name__c &amp;&quot;-&quot;&amp;  BSB_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*ContactName</label>
    <type>Text</type>
</CustomField>