force-app/main/default/objects/Bank_Account_Details__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <formula>TEXT(DAY(TODAY())) &amp;&quot;/&quot;&amp; TEXT(MONTH(TODAY())) &amp;&quot;/&quot;&amp; TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*DueDate</label>
    <type>Text</type>
</CustomField>