force-app/main/default/objects/Bank_Account_Details__c/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <formula>TEXT(DAY(TODAY())) &amp;&quot;/&quot;&amp; TEXT(MONTH(TODAY())) &amp;&quot;/&quot;&amp; TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*InvoiceDate</label>
    <type>Text</type>
</CustomField>