force-app/main/default/objects/Bank_Account_Details__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <formula>Order__r.Deal_ID__c &amp;&quot;-&quot;&amp;  Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*InvoiceNumber</label>
    <type>Text</type>
</CustomField>