force-app/main/default/objects/Bank_Account_Details__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Bank Account Details</relationshipLabel>
    <relationshipName>Bank_Account_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>