force-app/main/default/objects/Bank_Account_Details__c/fields/PurchasesAccount__c.field-meta.xml
<CustomField>
    <fullName>PurchasesAccount__c</fullName>
    <formula>&quot;306.01&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PurchasesAccount</label>
    <type>Text</type>
</CustomField>