force-app/main/default/objects/Bank_Account_Details__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <formula>&quot;1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*Quantity</label>
    <type>Text</type>
</CustomField>