force-app/main/default/objects/Bank_Account_Details__c/fields/Submitted_Date_FA__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date_FA__c</fullName>
    <label>Submitted Date (FA)</label>
    <type>DateTime</type>
</CustomField>