force-app/main/default/objects/Bank_Account_Details__c/fields/TaxType__c.field-meta.xml
<CustomField>
    <fullName>TaxType__c</fullName>
    <formula>&quot;BAS Excluded&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*TaxType</label>
    <type>Text</type>
</CustomField>