force-app/main/default/objects/Bank_Account_Details__c/fields/TrackingName1__c.field-meta.xml
<CustomField>
    <fullName>TrackingName1__c</fullName>
    <formula>&quot;Refunds - Customers&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TrackingName1</label>
    <type>Text</type>
</CustomField>