force-app/main/default/objects/Bank_Account_Details__c/fields/UnitAmount__c.field-meta.xml
<CustomField>
    <fullName>UnitAmount__c</fullName>
    <formula>IF( CONTAINS(TEXT(Order__r.CVC__c),&quot;BER&quot;),
TEXT( Order__r.BER_Refund_Amount__c),
TEXT( Order__r.total_payment_received__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*UnitAmount</label>
    <type>Text</type>
</CustomField>